Update and optimize container build (#88)