@@ -1,12 +1,48 @@
 # Build stage
 FROM maven:3.9.9-eclipse-temurin-21 AS build
+
 COPY src /home/app/src
 COPY pom.xml /home/app
-RUN mvn -f /home/app/pom.xml clean package -DskipTests
 COPY docker /home/app/docker
 
+RUN mvn -f /home/app/pom.xml clean package -DskipTests
+
+# Optimize stage
+FROM eclipse-temurin:21-jdk-alpine AS optimize
+
+COPY --from=build /home/app/target/*.jar /app/app.jar
+
+WORKDIR /app
+
+# List jar modules
+RUN jar xf app.jar
+RUN jdeps \
+    --ignore-missing-deps \
+    --print-module-deps \
+    --multi-release 21 \
+    --recursive \
+    --class-path 'BOOT-INF/lib/*' \
+    app.jar > modules.txt
+
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules $(cat modules.txt) \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
 # Package stage
-FROM eclipse-temurin:21-jre-alpine
+FROM alpine:latest
+
+ENV JAVA_HOME=/opt/jre
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# copy optimized JRE
+COPY --from=optimize /javaruntime $JAVA_HOME
+
+LABEL org.opencontainers.image.authors="CZERTAINLY <support@czertainly.com>"
 
 # add non root user cscapi
 RUN addgroup --system --gid 10001 cscapi && adduser --system --home /opt/cscapi --uid 10001 --ingroup cscapi cscapi
